BXEGS-430 make error icon in international phone field align correctly regardless of label size

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -606,6 +606,13 @@ input.hasMultiCalendarPicker.pi-date-input.input-error {
     right: 3em;
 }
 
+.input-fail.pi-phone-intl-err {
+    position: relative;
+    top: inherit;
+    bottom: 2.3em;
+    right: 1.2em;
+}
+
 .icon .icon-error {
     font-size: 16px;
 }
